--- a/css/common.css
+++ b/css/common.css
@@ -1,33 +1,33 @@
-/* COMMON */
-
+/*COMMON*/
 body {
-    color: #333;
+    font-family: 'Nanum Gothic', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.4;
-    font-family: "Nanum Gothic", sans-serif;
+    color: #333;
 }
-
-img {
-    display: block;
-}
-
 a {
     text-decoration: none;
 }
+img {
+    /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
+    display: block;
+}
 
+/*INNER*/
 .inner {
     width: 1100px;
     margin: 0 auto;
     position: relative;
 }
 
+/*BUTTON*/
 .btn {
     width: 130px;
     padding: 10px;
-    border: 2px solid #333333;
+    border: 2px solid #333;
     border-radius: 4px;
-    color: #333333;
+    color: #333;
     font-size: 16px;
     font-weight: 700;
     text-align: center;
@@ -36,88 +36,73 @@ a {
     display: block;
     transition: .4s;
 }
-
 .btn:hover {
-    background-color: #333333;
-    color: #ffffff;
+    background-color: #333;
+    color: #FFF;
 }
-
 .btn.btn--reverse {
-    background-color: #333333;
-    color: #ffffff;
+    background-color: #333;
+    color: #FFF;
 }
-
 .btn.btn--reverse:hover {
     background-color: transparent;
-    color: #333333;
+    color: #333;
 }
-
 .btn.btn--brown {
     color: #592B18;
     border-color: #592B18;
 }
-
-.btn.btn--brown:hover  {
-    color: #ffffff;
+.btn.btn--brown:hover {
+    color: #FFF;
     background-color: #592B18;
 }
-
 .btn.btn--gold {
-    color: #DA9A8A;
-    border-color: #DA9A8A;
+    color: #D9AA8A;
+    border-color: #D9AA8A;
 }
-
-.btn.btn--gold :hover  {
-    color: #ffffff;
-    border-color: #DA9A8A;
+.btn.btn--gold:hover {
+    color: #FFF;
+    background-color: #D9AA8A;
 }
-
 .btn.btn--white {
-    color: #ffffff;
-    border-color: #ffffff;
+    color: #FFF;
+    border-color: #FFF;
+}
+.btn.btn--white:hover {
+    color: #333;
+    background-color: #FFF;
 }
 
-.btn.btn--gold :hover  {
-    color: #333333;
-    border-color: #ffffff;
-}
-
+/*BACK TO POSITION*/
 .back-to-position {
     opacity: 0;
     transition: 1s;
 }
-
 .back-to-position.to-right {
     transform: translateX(-150px);
 }
-
 .back-to-position.to-left {
     transform: translateX(150px);
 }
-
 .show .back-to-position {
     opacity: 1;
     transform: translateX(0);
 }
-
 .show .back-to-position.delay-0 {
     transition-delay: 0s;
 }
-
 .show .back-to-position.delay-1 {
     transition-delay: .3s;
-
 }
-
 .show .back-to-position.delay-2 {
     transition-delay: .6s;
 }
-
 .show .back-to-position.delay-3 {
     transition-delay: .9s;
 }
 
-/* HEADER */
+
+/*HEADER*/
 header {
     width: 100%;
     position: fixed;
@@ -268,22 +253,22 @@ header .main-menu .item .item__contents .contents__texture p {
     color: #64a70b;
     margin: 4px 0 14px;
 }
-
+/*BADGES*/
 header .badges {
     position: absolute;
     top: 132px;
     right: 12px;
 }
-
-header .badges .badge{
+header .badges .badge {
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 12px;
-    box-shadow: 4px 4px 10px rgb(0,0,0,.15);
+    box-shadow: 4px 4px 10px rgba(0,0,0,.15);
     cursor: pointer;
 }
 
 
+/*FOOTER*/
 footer {
     background-color: #272727;
     border-top: 1px solid #333;
@@ -354,21 +339,4 @@ footer .copyright {
 }
 footer .logo {
     margin: 30px auto 0;
-}
-
-#to-top {
-    width: 42px;
-    height: 42px;
-    background-color: #333333;
-    color: #ffffff;
-    border: 2px solid #ffffff;
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    z-index: 9;
 }
